k8s/webinfo_canary.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: webinfo
  name: webinfo-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webinfo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webinfo
        version: canary
    spec:
      containers:
      - image: gcr.io/toddreedy-services/simple-go-app:v1.1
        name: simple-go-app
        ports:
        - name: http-8080
          containerPort: 8080
        resources: 
          requests:
            cpu: "100m"
            memory: "64M"
          limits:
            cpu: "250m"
            memory: "128M"
