k8s/gateway-webinfo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webinfo-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # For simple setup
